@@ -32,15 +32,12 @@ void *alloca (size_t);
 #include <Ecore.h>
 #include <Ecore_File.h>
 
+/* define macros and variable for using the eina logging system  */
+#define EFREET_MODULE_LOG_DOM _efreet_icon_log_dom
+static int _efreet_icon_log_dom = -1;
+
 #include "Efreet.h"
 #include "efreet_private.h"
-
-#ifdef EFREET_MODULE_LOG_DOM
-#undef EFREET_MODULE_LOG_DOM
-#endif
-#define EFREET_MODULE_LOG_DOM _efreet_icon_log_dom
-
-static int _efreet_icon_log_dom = -1;
 
 Eina_Hash *efreet_icon_themes = NULL;
 
