@@ -43,6 +43,10 @@ void *alloca (size_t);
 #include <Ecore.h>
 #include <Ecore_File.h>
 
+/* define macros and variable for using the eina logging system  */
+#define EFREET_MODULE_LOG_DOM _efreet_mime_log_dom
+static int _efreet_mime_log_dom = -1;
+
 #include "Efreet.h"
 #include "Efreet_Mime.h"
 #include "efreet_private.h"
@@ -160,15 +164,6 @@ struct Efreet_Mime_Icon_Entry
     const char *theme;
     unsigned int size;
 };
-
-/* define macros and variable for using the eina logging system  */
-
-#ifdef EFREET_MODULE_LOG_DOM
-#undef EFREET_MODULE_LOG_DOM
-#endif
-#define EFREET_MODULE_LOG_DOM _efreet_mime_log_dom
-static int _efreet_mime_log_dom = -1;
-
 
 static int efreet_mime_glob_remove(const char *glob);
 static void efreet_mime_mime_types_load(const char *file);
